--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -1,3 +1,14 @@
+<div class="container">
+  <nav class="navbar navbar-default">
+    <ul class="nav navbar-nav">
+      <li>
+        <a routerLink="/list">List</a>
+      </li>
+      <li>
+        <a routerLink="/edit/0">Create</a>
+      </li>
+    </ul>
+  </nav>
 <div class="form-group">
   <input type="text" class="form-control" placeholder="Search By Name"
           [(ngModel)]="searchTerm" />
@@ -10,6 +21,7 @@
 </div>
 <div *ngIf="error">
   {{ error}}
+</div>
 </div>
 
 
