--- a/src/app/employees/signup/signup.component.html
+++ b/src/app/employees/signup/signup.component.html
@@ -1,30 +1,43 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <div class="card" style="margin-top:10%">
+      <div class="card" >
         <div class="text-center">
           <h1>Employee Signup</h1>
           <h5>Get Free Membership</h5><hr>
         </div>
         <form [formGroup]="signupForm" (ngSubmit)="signUp()">
-          <div class="mb-3">
+          <div class="form-group mb-3">
             <label  class="form-label">Name</label>
             <input formControlName="name" placeholder="Enter name" type="text" class="form-control"  >
-          </div><br>
-          <div class="mb-3">
+            <span *ngIf="checkUserError('name', 'required')" class="error"></span>
+
+          </div>
+          <div class="form-group mb-3">
             <label  class="form-label">Mobile Number</label>
             <input formControlName="phoneNumber" placeholder="Enter mobile No" type="number" class="form-control" >
-          </div><br>
-          <div class="mb-3">
+            <span *ngIf="checkUserError('phoneNumber', 'required')" class="help-block"></span>
+
+          </div>
+          <div class="form-group mb-3">
             <label  class="form-label">Email address</label>
             <input formControlName="email" placeholder="Enter Email" type="email" class="form-control" >
-          </div><br>
+            <span *ngIf="checkUserError('email', 'required')" class="error"></span>
+          </div>
 
 
-          <div class="mb-3">
+          <div class="form-group mb-3">
             <label  class="form-label">Password</label>
             <input formControlName="password" placeholder="Enter Password" type="password" class="form-control" >
-          </div><br/>
+
+          </div>
+
+          <div class=" form-group mb-3">
+            <label  class="form-label">Confirm Password</label>
+            <input formControlName="confirmPassword" placeholder="Enter Confirm Password" type="password" class="form-control" >
+            <span cla *ngIf="checkUserError('confirmPassword', 'ConfirmPasswordValidator')"
+            class="help-block">password doesn't match</span>
+          </div>
 
           <button type="submit" class="btn btn-primary">Signup</button>
         </form><br>
