add validations res lines

--- a/src/app/employees/signup/signup.component.html
+++ b/src/app/employees/signup/signup.component.html
@@ -29,6 +29,7 @@
           <div class="form-group mb-3">
             <label  class="form-label">Password</label>
             <input formControlName="password" placeholder="Enter Password" type="password" class="form-control" >
+            <small style="color:orangered;">Password must be atleast 8 character</small>
 
           </div>
 
